internet bundle removed, updates 2024-03-26
  //**********`Modified by: Costas Manousakis-(Designer)-(2024-03-21)
  // M_WRT_CsltInsp_ComplexNTP - copied to v19R8 project 2024-03-26
  //  `moved getting the Get selected menu item parameter before the call to CSLTINSP_ProceedWithLetter
  //  `confirm dialogs would 'loose' the parameter
  // M_WRT_CsltInsp_ComplexReqFee - copied to v19R8 project 2024-03-26
  //  `moved getting the Get selected menu item parameter before the call to CSLTINSP_ProceedWithLetter
  //  `confirm dialogs would 'loose' the parameter

`**********`Modified by: Costas Manousakis-(Designer)-(2024-03-26)
  // PRINT_SIA - copied to v19R8 project 2024-03-26
  //  `added Open/Close printing job and spooler doc name to prevent crash when printing to Adobe PDF
  // with MS print to pdf the save as dialog shows at the Open print job command and user can cancel here
  // other pdf printers show the save as dialog at the Close print job command.

  // M_PrintRecords - copied to v19R8 project 2024-03-26
  //  `added Open/Close printing job and spooler doc name to prevent crash when printing to Adobe PDF

--- a/Resources/php.ini
+++ b/Resources/php.ini
@@ -148,4 +148,4 @@ track_errors = Off
 date.timezone = "UTC"
 
 extension_dir = "./"
-;auto_prepend_file = "/Applications/4D v14/4D.app/Contents/Resources/php/Mac/_4D_Execute_PHP.php"auto_prepend_file = "/Applications/4D v15.0/4D.app/Contents/Resources/php/Mac/_4D_Execute_PHP.php"
+;auto_prepend_file = "/Applications/4D v14/4D.app/Contents/Resources/php/Mac/_4D_Execute_PHP.php";auto_prepend_file = "/Applications/4D v15.0/4D.app/Contents/Resources/php/Mac/_4D_Execute_PHP.php"auto_prepend_file = "/Applications/4D v19 R8/4D.app/Contents/Resources/php/Mac/_4D_Execute_PHP.php"
