--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,12 @@ ehthumbs.db
 Thumbs.db
 
 temporary files/
-Lods/
+Logs/
 Plugins/
 Components/
 Extras/
 PrefRecords/
+Plugins/Cache/4D for OCI.4darchive
+Project/.DS_Store
+Project/Sources/.DS_Store
+/userPreferences.Costas Manousakis
