--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ Plugins/Cache/4D for OCI.4darchive
 Project/.DS_Store
 Project/Sources/.DS_Store
 /userPreferences.Costas Manousakis
+Project/Sources/.DS_Store
+Project/.DS_Store
+Project/.DS_Store
+.DS_Store
+.DS_Store
+Project/.DS_Store
+Project/Sources/.DS_Store
