--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ Project/.DS_Store
 .DS_Store
 Project/.DS_Store
 Project/Sources/.DS_Store
+/userPreferences.Costas Manousakis
+/userPreferences.Costas Manousakis
+/Preferences
+/Preferences
