--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ Project/Sources/.DS_Store
 /userPreferences.Costas Manousakis
 /Preferences
 /Preferences
+/Preferences/4DPop
+/Preferences/4DPop
+/userPreferences.Costas Manousakis
